packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_after_heading_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      9
    ],
    "items": 6,
    "width": 133.31,
    "height": 42.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      11,
      18
    ],
    "items": 6,
    "width": 24.26,
    "height": 34.18,
    "x": 0.0,
    "y": 83.84
  },
  {
    "range": [
      20,
      25
    ],
    "items": 2,
    "width": 44.56,
    "height": 21.12,
    "x": 0.0,
    "y": 159.44
  }
]
