packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_after_heading_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 18,
      "end": 19
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
