packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_before_list_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 8,
    "width": 24.26,
    "height": 34.18,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      19
    ],
    "items": 7,
    "width": 74.08,
    "height": 12.27,
    "x": 18.96,
    "y": 79.81
  },
  {
    "range": [
      20,
      30
    ],
    "items": 11,
    "width": 74.24,
    "height": 12.27,
    "x": 18.96,
    "y": 102.93
  }
]
