packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_dollar_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 4,
    "width": 63.76,
    "height": 21.12,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      16
    ],
    "items": 6,
    "width": 24.26,
    "height": 34.18,
    "x": 0.0,
    "y": 62.72
  },
  {
    "range": [
      18,
      34
    ],
    "items": 3,
    "width": 92.56,
    "height": 44.24,
    "x": 0.0,
    "y": 138.32
  }
]
