packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_dollar_eof_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      12
    ],
    "items": 5,
    "width": 63.76,
    "height": 44.24,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      14,
      21
    ],
    "items": 6,
    "width": 24.26,
    "height": 34.18,
    "x": 0.0,
    "y": 85.84
  }
]
