packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_dollar_mid_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      14
    ],
    "items": 9,
    "width": 57.6,
    "height": 57.3,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      16,
      22
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 98.72
  }
]
