packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_dollar_only_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 1,
      "end": 1
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
