packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_unclosed_dollar_start_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      7
    ],
    "items": 8,
    "width": 24.26,
    "height": 34.18,
    "x": 0.0,
    "y": 0.0
  },
  {
    "range": [
      9,
      15
    ],
    "items": 2,
    "width": 54.16,
    "height": 21.12,
    "x": 0.0,
    "y": 75.6
  }
]
